--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Franja Morada FDER</title>
+    <title>Franja Morada FDER | Facultad de Derecho UNR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="Franja Morada FDER. Información sobre carreras, propuestas académicas, representación estudiantil y órganos de gobierno de la Facultad." />
+    
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/Icono.jpg">
