--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <title>Franja Morada FDER | Facultad de Derecho UNR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Franja Morada FDER. Información sobre carreras, propuestas académicas, representación estudiantil y órganos de gobierno de la Facultad." />
-    
+    <meta name="description"
+        content="Franja Morada FDER. Información sobre carreras, propuestas académicas, representación estudiantil y órganos de gobierno de la Facultad." />
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/Icono.jpg">
@@ -31,7 +32,7 @@
 
                 <ul class="nav" id="navMenu">
                     <li><a href="index.html">Inicio</a></li>
-                   <li class="nav-item dropdown">
+                    <li class="nav-item dropdown">
                         <a href="#" class="dropdown-toggle">¿Qué hacemos? ▾</a>
                         <ul class="dropdown-menu">
                             <li><a href="consejo_directivo.html">Consejo Directivo</a></li>
