--- a/fur.html
+++ b/fur.html
@@ -84,7 +84,7 @@
                         los estudiantes y llenándola de contenido!
                     </p>
                     <p>
-                        <i>Somos la Federación Universitaria de Rosario</i>
+                        <i>Somos la Federación Universitaria de Rosario.</i>
                     </p>
                 </div>
             </div>
