--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 
             <nav class="nav-container">
                 <button class="menu-toggle" id="menuToggle" aria-label="Abrir menú">
-                    ☰
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </button>
+
 
                 <ul class="nav" id="navMenu">
                     <li><a href="index.html">Inicio</a></li>
