--- a/fur.html
+++ b/fur.html
@@ -75,7 +75,7 @@
             <!-- FILA 1 -->
             <div class="proposal-row">
                 <div class="proposal-image">
-                    <img src="img/propuesta/FUR/F1.jpeg" alt="Grupos de estudio">
+                    <img src="img/Propuesta/FUR/F1.jpeg" alt="Grupos de estudio">
                 </div>
 
                 <div class="proposal-text">
@@ -117,14 +117,14 @@
                 </div>
 
                 <div class="proposal-image">
-                    <img src="img/propuesta/FUR/F2.jpeg" alt="Equipo de clases de consulta">
+                    <img src="img/Propuesta/FUR/F2.jpeg" alt="Equipo de clases de consulta">
                 </div>
             </div>
 
             <!-- FILA 3 -->
             <div class="proposal-row">
                 <div class="proposal-image">
-                    <img src="img/propuesta/FUR/F3.jpeg" alt="Grupos de estudio">
+                    <img src="img/Propuesta/FUR/F3.jpeg" alt="Grupos de estudio">
                 </div>
 
                 <div class="proposal-text">
@@ -168,13 +168,13 @@
                 </div>
 
                 <div class="proposal-image">
-                    <img src="img/propuesta/FUR/F4.jpeg" alt="Equipo de clases de consulta">
+                    <img src="img/Propuesta/FUR/F4.jpeg" alt="Equipo de clases de consulta">
                 </div>
             </div>
             <!-- FILA 5 -->
             <div class="proposal-row">
                 <div class="proposal-image">
-                    <img src="img/propuesta/FUR/F5.jpeg" alt="Grupos de estudio">
+                    <img src="img/Propuesta/FUR/F5.jpeg" alt="Grupos de estudio">
                 </div>
 
                 <div class="proposal-text">
