--- a/propuestas_academicas.html
+++ b/propuestas_academicas.html
@@ -76,7 +76,7 @@
             <!-- FILA 1 -->
             <div class="proposal-row">
                 <div class="proposal-image">
-                    <img src="img/propuesta/ima1.jpeg" alt="Grupos de estudio">
+                    <img src="img/Propuesta/ima1.jpeg" alt="Grupos de estudio">
                 </div>
 
                 <div class="proposal-text">
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="proposal-image">
-                    <img src="img/propuesta/ima2.jpeg" alt="Equipo de clases de consulta">
+                    <img src="img/Propuesta/ima2.jpeg" alt="Equipo de clases de consulta">
                 </div>
             </div>
 
