--- a/consejo_directivo.html
+++ b/consejo_directivo.html
@@ -3,9 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Consejo Directivo - Franja Morada FDER</title>
+    <title>Consejo Directivo de la Facultad de Derecho UNR | Franja Morada FDER</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Información sobre el Consejo Directivo de la Facultad de Derecho UNR. Funciones, representación de claustros y proyectos impulsados por Franja Morada FDER.">
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/Icono.jpg">
@@ -136,11 +139,11 @@
             <!-- FILA 2 -->
             <div class="propuesta-images propuesta-images--doble">
                 <div class="propuesta-image">
-                    <img src="img/Propuesta/ConsejoD/Corredor.png" alt="Corredor seguro">
+                    <img src="img/Propuesta/ConsejoD/Corredor.png" alt="Representantes de la UNR en el Consejo Superior">
                 </div>
 
                 <div class="propuesta-image">
-                    <img src="img/Propuesta/ConsejoD/Seguridadpng.png" alt="Seguridad en la Facultad">
+                    <img src="img/Propuesta/ConsejoD/Seguridadpng.png" alt="Obras de seguridad en la Facultad de Derecho UNR">
                 </div>
             </div>
 
@@ -173,7 +176,7 @@
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -182,7 +185,7 @@
                     <small>Corretaje</small>
                 </a>
                 <a href="https://www.instagram.com/franjamoradaderechounr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -191,7 +194,7 @@
                     <small>Cuenta principal</small>
                 </a>
                 <a href="https://www.instagram.com/corretaje_unr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
