--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Franja Morada FDER | Facultad de Derecho UNR</title>
+    <title>Franja Morada FDER – Facultad de Derecho UNR | Agrupación Estudiantil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Franja Morada FDER. Información sobre carreras, propuestas académicas, representación estudiantil y órganos de gobierno de la Facultad." />
+        content="Franja Morada FDER es la agrupación estudiantil de la Facultad de Derecho UNR. Conocé nuestras propuestas académicas, carreras, representación estudiantil y actividades." />
+    <meta name="robots" content="index, follow">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -77,7 +78,8 @@
     <section class="section about">
         <div class="container">
             <h2>Quiénes Somos</h2>
-            <img src="img/Inicio/Inicio.jpeg" alt="Foto de estudiantes en la facultad" class="inicio-image">
+            <img src="img/Inicio/Inicio.jpeg loading=" lazy"" alt="Foto de estudiantes en la facultad"
+                class="inicio-image">
             <p>
                 Somos estudiantes como vos, que además de cursar y rendir, estamos comprometidos y defendemos las ideas
                 y principios que surgen de la Reforma Universitaria de 1918, la cual incorpora los conceptos de
@@ -143,7 +145,7 @@
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -152,7 +154,7 @@
                     <small>Corretaje</small>
                 </a>
                 <a href="https://www.instagram.com/franjamoradaderechounr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -161,7 +163,7 @@
                     <small>Cuenta principal</small>
                 </a>
                 <a href="https://www.instagram.com/corretaje_unr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
