--- a/propuestas_academicas.html
+++ b/propuestas_academicas.html
@@ -6,6 +6,9 @@
     <title>Propuesta Académica - Franja Morada FDER</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Propuesta académica de Franja Morada FDER en la Facultad de Derecho UNR: clases de consulta, grupos de estudio, talleres, material grabado y acompañamiento académico para Abogacía y Corretaje.">
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/Icono.jpg">
@@ -125,7 +128,7 @@
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -134,7 +137,7 @@
                     <small>Corretaje</small>
                 </a>
                 <a href="https://www.instagram.com/franjamoradaderechounr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -143,7 +146,7 @@
                     <small>Cuenta principal</small>
                 </a>
                 <a href="https://www.instagram.com/corretaje_unr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
