--- a/secretarias_ced.html
+++ b/secretarias_ced.html
@@ -6,6 +6,9 @@
     <title>Secretarias CED - Franja Morada FDER</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Secretarías del Centro de Estudiantes de la Facultad de Derecho UNR. Conocé las áreas, responsables y el trabajo de Franja Morada en el Consejo Directivo.">
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/Icono.jpg">
@@ -91,12 +94,12 @@
                     </p>
                     <p>
                         Después de las elecciones del corriente año nuestra agrupación cuenta con 4 secretarias:
-                        <ul>
-                            - Secretaría de Cultura y Deportes <br>
-                            - Secretaría de Género y Diversidad <br>
-                            - Secretaría de Prensa y Difusión <br>
-                            - Secretaría de Relaciones Institucionales
-                        </ul>
+                    <ul>
+                        - Secretaría de Cultura y Deportes <br>
+                        - Secretaría de Género y Diversidad <br>
+                        - Secretaría de Prensa y Difusión <br>
+                        - Secretaría de Relaciones Institucionales
+                    </ul>
                     </p>
                 </div>
             </div>
@@ -108,16 +111,19 @@
 
                 <div class="proposal-text">
                     <p>
-                       <b>SECRETARIA DE DEPORTE</b>
+                        <b>SECRETARIA DE DEPORTE</b>
                     </p>
                     <p>
-                       Ellos son Loana y Nacho, nuestros secretarios de deporte del periodo 2025 - 2026 
+                        Ellos son Loana y Nacho, nuestros secretarios de deporte del periodo 2025 - 2026
                     </p>
                     <p>
-                        Serán los encargados de planificar y realizar diferentes actividades con el objetivo de vincular a la comunidad de nuestra facultad con el deporte. 
+                        Serán los encargados de planificar y realizar diferentes actividades con el objetivo de vincular
+                        a la comunidad de nuestra facultad con el deporte.
                     </p>
                     <p>
-                        Con el apoyo de todo nuestro grupo militante y amigos dispuestos a colaborar llevaremos a nuestra querida Fder a todos los deportes interfacultades y transformaremos esta secretaria en un ejemplo de trabajo, dispersión y sostén de todos aquellos estudiantes que lo necesiten.
+                        Con el apoyo de todo nuestro grupo militante y amigos dispuestos a colaborar llevaremos a
+                        nuestra querida Fder a todos los deportes interfacultades y transformaremos esta secretaria en
+                        un ejemplo de trabajo, dispersión y sostén de todos aquellos estudiantes que lo necesiten.
                     </p>
                 </div>
             </div>
@@ -126,13 +132,17 @@
             <div class="proposal-row reverse">
                 <div class="proposal-text">
                     <p>
-                       <b>SECRETARIA DE PRENSA </b>
+                        <b>SECRETARIA DE PRENSA </b>
                     </p>
                     <p>
-                       Ellos son Walter y Pili, nuestros secretarios de prensa para el periodo 2025 - 2026.
+                        Ellos son Walter y Pili, nuestros secretarios de prensa para el periodo 2025 - 2026.
                     </p>
                     <p>
-                        Serán los encargados de llevar adelante toda la comunicación de nuestra organización, reinventándose constantemente para lograr brindar toda la información que a nuestra comunidad universitaria le interesa y por sobre todas las cosas, son los que tienen el deber de vincular y lograr la participación de los estudiantes de los debates y decisiones institucionales que en estos tiempos nos están atravesando.
+                        Serán los encargados de llevar adelante toda la comunicación de nuestra organización,
+                        reinventándose constantemente para lograr brindar toda la información que a nuestra comunidad
+                        universitaria le interesa y por sobre todas las cosas, son los que tienen el deber de vincular y
+                        lograr la participación de los estudiantes de los debates y decisiones institucionales que en
+                        estos tiempos nos están atravesando.
                     </p>
                 </div>
 
@@ -148,16 +158,18 @@
 
                 <div class="proposal-text">
                     <p>
-                       SECRETARIA DE EXTENSIÓN
+                        SECRETARIA DE EXTENSIÓN
                     </p>
                     <p>
                         Ellas son Kiari y Valen, nuestras secretarias de extensión para el periodo 2025 - 2026.
                     </p>
                     <p>
-                        Son las encargadas de vincular la institución con la comunidad, la extensión universitaria es uno de los principales pilares de la reforma universitaria. 
+                        Son las encargadas de vincular la institución con la comunidad, la extensión universitaria es
+                        uno de los principales pilares de la reforma universitaria.
                     </p>
                     <p>
-                        Su objetivo será consolidar un vinculo entre nuestra casa de estudio y la sociedad, generando un intercambio de conocimientos y experiencias únicas. 
+                        Su objetivo será consolidar un vinculo entre nuestra casa de estudio y la sociedad, generando un
+                        intercambio de conocimientos y experiencias únicas.
                     </p>
                 </div>
             </div>
@@ -171,7 +183,9 @@
                         Ellos son Mau y Nere, nuestros secretarios de prensa para el periodo 2025 - 2026.
                     </p>
                     <p>
-                        Son los encargados de promocionar y planificar actividades de investigación científica para los estudiantes de la Fder. Son la sección académica de nuestra organización y quienes constantemente están velando por la excelencia académica que nos caracteriza.
+                        Son los encargados de promocionar y planificar actividades de investigación científica para los
+                        estudiantes de la Fder. Son la sección académica de nuestra organización y quienes
+                        constantemente están velando por la excelencia académica que nos caracteriza.
                     </p>
                 </div>
                 <div class="proposal-image">
@@ -188,7 +202,7 @@
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -197,7 +211,7 @@
                     <small>Corretaje</small>
                 </a>
                 <a href="https://www.instagram.com/franjamoradaderechounr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -206,7 +220,7 @@
                     <small>Cuenta principal</small>
                 </a>
                 <a href="https://www.instagram.com/corretaje_unr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
