--- a/corretaje.html
+++ b/corretaje.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Corretaje Inmobiliario - Franja Morada FDER</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Carrera de Corretaje Inmobiliario en la Facultad de Derecho UNR. Información sobre cursado, materias, salida profesional y recursos académicos para estudiantes." />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -18,7 +20,7 @@
     <!-- HEADER -->
     <header class="header">
         <div class="container header-content">
-            <h1 class="site-title">
+            <h1 class="site-title visually-hidden">
                 <a href="index.html">Franja Morada FDER</a>
             </h1>
 
@@ -48,7 +50,7 @@
                     </li>
                     <li><a href="codigos.html">Codigos</a></li>
                 </ul>
-            </nav>  
+            </nav>
 
         </div>
     </header>
@@ -97,50 +99,50 @@
             <h2>Información útil</h2>
 
             <div class="cards">
-                <a href="https://drive.google.com/drive/folders/1x5sqrVn4fEjM3rLIYM6bO5AzY5vWoCaW"
-                    class="card link-card">
+                <a href="https://drive.google.com/drive/folders/1x5sqrVn4fEjM3rLIYM6bO5AzY5vWoCaW" target="_blank"
+                    rel="noopener noreferrer" class="card link-card">
                     <h3>Libros y fichas de cátedra</h3>
                     <p>Material bibliográfico recomendado por las cátedras para acompañar el cursado.</p>
                     <span class="card-action">Ver material</span>
                 </a>
 
-                <a href="https://drive.google.com/drive/folders/10ro9mSLn8K1Zof1EWldVFcTK2kZ5-W3T"
-                    class="card link-card">
+                <a href="https://drive.google.com/drive/folders/10ro9mSLn8K1Zof1EWldVFcTK2kZ5-W3T" target="_blank"
+                    rel="noopener noreferrer" class="card link-card">
                     <h3>Resúmenes y guías de estudio</h3>
                     <p>Apuntes y guías pensadas para facilitar el estudio y la preparación de exámenes.</p>
                     <span class="card-action">Acceder a resúmenes</span>
                 </a>
 
-                <a href="https://drive.google.com/drive/folders/11kciMNt-Tkc_Vv5yY_6BW8v9X0AD0eDw"
-                    class="card link-card">
+                <a href="https://drive.google.com/drive/folders/11kciMNt-Tkc_Vv5yY_6BW8v9X0AD0eDw" target="_blank"
+                    rel="noopener noreferrer" class="card link-card">
                     <h3>Preguntas de exámenes</h3>
                     <p>Modelos y preguntas frecuentes de parciales y finales de distintas materias.</p>
                     <span class="card-action">Ver preguntas</span>
                 </a>
 
-                <a href="https://drive.google.com/drive/folders/1kw3bk4ERnTQoZBH3e75-6PNQO5dyzRzm"
-                    class="card link-card">
+                <a href="https://drive.google.com/drive/folders/1kw3bk4ERnTQoZBH3e75-6PNQO5dyzRzm" target="_blank"
+                    rel="noopener noreferrer" class="card link-card">
                     <h3>Programas de las materias</h3>
                     <p>Contenidos oficiales de cada materia según la cátedra correspondiente.</p>
                     <span class="card-action">Ver programas</span>
                 </a>
 
-                <a href="https://drive.google.com/drive/folders/1NECs2ocx2BdCupR8M9YWGxF6XzH4-bQV"
-                    class="card link-card">
+                <a href="https://drive.google.com/drive/folders/1NECs2ocx2BdCupR8M9YWGxF6XzH4-bQV" target="_blank"
+                    rel="noopener noreferrer" class="card link-card">
                     <h3>Grupos de estudio</h3>
                     <p>Espacio para sumarte o presentar grupos de estudio entre estudiantes.</p>
                     <span class="card-action">Participar</span>
                 </a>
 
-                <a href="https://drive.google.com/drive/folders/19tcYpaI_Ha8016nLqYgHHP0OuzVpBLbY"
-                    class="card link-card">
+                <a href="https://drive.google.com/drive/folders/19tcYpaI_Ha8016nLqYgHHP0OuzVpBLbY" target="_blank"
+                    rel="noopener noreferrer" class="card link-card">
                     <h3>Calendario académico</h3>
                     <p>Fechas importantes del año académico: inscripciones, parciales y finales.</p>
                     <span class="card-action">Ver calendario</span>
                 </a>
 
-                <a href="https://drive.google.com/drive/folders/19tcYpaI_Ha8016nLqYgHHP0OuzVpBLbY"
-                    class="card link-card">
+                <a href="https://drive.google.com/drive/folders/19tcYpaI_Ha8016nLqYgHHP0OuzVpBLbY" target="_blank"
+                    rel="noopener noreferrer" class="card link-card">
                     <h3>Plan de estudios</h3>
                     <p>Estructura completa de la carrera, materias y correlatividades.</p>
                     <span class="card-action">Ver plan</span>
@@ -158,7 +160,7 @@
 
             <div class="social-grid">
                 <a href="https://www.instagram.com/franjamorada.corretaje?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -167,7 +169,7 @@
                     <small>Corretaje</small>
                 </a>
                 <a href="https://www.instagram.com/franjamoradaderechounr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
@@ -176,7 +178,7 @@
                     <small>Cuenta principal</small>
                 </a>
                 <a href="https://www.instagram.com/corretaje_unr?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                    target="_blank" class="social-card">
+                    target="_blank" rel="noopener noreferrer" class="social-card">
                     <svg class="ig-icon" viewBox="0 0 24 24">
                         <path
                             d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm10 2H7a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3zm-5 3a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm5.5-.9a1.1 1.1 0 110 2.2 1.1 1.1 0 010-2.2z" />
