--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section class="section about">
         <div class="container">
             <h2>Quiénes Somos</h2>
-            <img src="img/Inicio/Inicio.jpeg loading=" lazy"" alt="Foto de estudiantes en la facultad"
+            <img src="img/Inicio/Inicio.jpeg" loading="lazy" alt="Foto de estudiantes en la facultad"
                 class="inicio-image">
             <p>
                 Somos estudiantes como vos, que además de cursar y rendir, estamos comprometidos y defendemos las ideas
